@@ -2,6 +2,8 @@
 
 ## Unreleased
 
+* do not use `javax.xml.bind.*` dependencies, that might crash on jre9
+
 ## v0.8.2
 * add jar signing
 * updates apksigner to v26.0.2
